erDiagram
    User ||--o{ Post : creates
    User ||--o{ Comment : writes
    Post ||--o{ Comment : has
    Post }|--|| Community : belongs_to

    User {
        int id PK
        string username
        string email
        string password
        string avatar_url
        datetime created_at
        datetime updated_at
    }

    Post {
        int id PK
        string title
        text content
        int user_id FK
        int community_id FK
        datetime created_at
        datetime updated_at
    }

    Comment {
        int id PK
        text content
        int user_id FK
        int post_id FK
        datetime created_at
    }

    Community {
        int id PK
        string name
        string description
        enum category
    }